// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputLabel when asked to render renders 1`] = `
<div
  className="group flex flex-col gap-1"
>
  <input
    className="peer order-2"
    id="testInput"
    name="testInput"
  />
  <label
    className="text-neutral-light-300 dark:text-neutral-dark-300 text-sm font-semibold order-1 peer-focus:text-primary-300 peer-data-[invalid=true]:text-error peer-data-[focused=true]:peer-data-[invalid=false]:text-primary-300"
    htmlFor="testInput"
  >
    Test label
  </label>
</div>
`;

exports[`InputLabel when asked to render with additional class renders with additional class 1`] = `
<div
  className="group flex flex-col gap-1 some-class"
>
  <input
    className="peer order-2"
    id="testInput"
    name="testInput"
  />
  <label
    className="text-neutral-light-300 dark:text-neutral-dark-300 text-sm font-semibold order-1 peer-focus:text-primary-300 peer-data-[invalid=true]:text-error peer-data-[focused=true]:peer-data-[invalid=false]:text-primary-300"
    htmlFor="test-input"
  >
    Test label
  </label>
</div>
`;

exports[`InputLabel when asked to render with error renders with error 1`] = `
<div
  className="group flex flex-col gap-1"
>
  <input
    aria-invalid={true}
    className="peer order-2"
    id="testInput"
    name="testInput"
  />
  <label
    className="text-neutral-light-300 dark:text-neutral-dark-300 text-sm font-semibold order-1 peer-focus:text-primary-300 peer-data-[invalid=true]:text-error peer-data-[focused=true]:peer-data-[invalid=false]:text-primary-300"
    htmlFor="testInput"
  >
    Test label
  </label>
  <div
    className="order-3 flex gap-1.5 items-center"
  >
    <svg
      aria-hidden="true"
      className="w-5 h-5 text-error"
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <p
      className="text-base text-error"
      id="testInputErrorMessage"
    >
      Test error
    </p>
  </div>
</div>
`;
